src/tests/snapshots/synoik__tests__window_opening__check_target_size@omT-dwF1000-dhF500-b-wfsAN-t.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\ndefault column width: F1000\ndefault window height: F500\nborder on\nwant fullscreen: AN\ntabbed"
expression: snapshot
---
initial configure:
size: 1231 × 500, bounds: 1231 × 680, states: []

post-map configures:
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen]
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1231 × 500, bounds: 1231 × 680, states: [Activated]
